--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     depends_on:
-      - db
+      - vpn_db
 
-  db:
+  vpn_db:
     image: postgres:16.0-alpine3.17
     restart: always
     env_file:
